--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,9 @@
     </distributionManagement>
     <properties>
         <!-- RC Version Ok -->
-        <jackson.version>2.13.4</jackson.version>
-        <jackson.databind.version>2.13.4</jackson.databind.version>
-        <jackson.extension.version>2.13.4</jackson.extension.version>
+        <jackson.version>2.14.0-rc1</jackson.version>
+        <jackson.databind.version>2.14.0-rc1</jackson.databind.version>
+        <jackson.extension.version>2.14.0-rc1</jackson.extension.version>
 
         <!-- Java Projection Basic Configuration -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
